# WS_Uebung_A5

./: BUILD.md  README.md  client.py
Server1/: CMakeLists.txt  server.cpp
Server2/: CMakeLists.txt  server.cpp
Server3/: CMakeLists.txt  server.cpp
